--- a/PEC6_Ej4/src/app/wines/wine-new/wine-new.component.html
+++ b/PEC6_Ej4/src/app/wines/wine-new/wine-new.component.html
@@ -46,6 +46,6 @@
       <input type="checkbox" formControlName="isOnSale">
       <label for="isOnSale">On Sale</label>
     </div>
-    <button type="submit" (click)="create()">Create</button>
+    <button type="submit">Create</button>
   </form>
 </div>
